「2ch修羅場カーボーイ」プライバシーポリシー

--- a/index.html
+++ b/index.html
@@ -1,12 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>2ch修羅場カーボーイ プライバシーポリシー</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+        }
+        header {
+            background-color: #f4f4f4;
+            padding: 10px 20px;
+            border-bottom: 1px solid #ddd;
+        }
+        header h1 {
+            margin: 0;
+        }
+        main {
+            padding: 20px;
+        }
+        h2 {
+            color: #333;
+            margin-top: 20px;
+        }
+        p, ul {
+            margin: 10px 0;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>This page describes the privacy policy of our application.</p>
+    <header>
+        <h1>2ch修羅場カーボーイ プライバシーポリシー</h1>
+    </header>
+    <main>
+        <p>「2ch修羅場カーボーイ」アプリケーション（以下、「当アプリ」）では、ユーザーのプライバシーを尊重し、個人情報の保護に努めます。このプライバシーポリシーは、当アプリで収集される情報、その利用方法、そして情報の保護について説明します。</p>
+
+        <h2>1. 収集する情報</h2>
+        <p>当アプリでは、Google OAuth認証を使用して以下の情報にアクセスします:</p>
+        <ul>
+            <li>ユーザーのYouTubeアカウント情報</li>
+            <li>チャンネルID、チャンネル名</li>
+            <li>動画情報（タイトル、説明、再生リストなど）</li>
+            <li>アカウントの公開ステータス</li>
+        </ul>
+        <p><strong>注記:</strong><br>
+        これらの情報は、ユーザーの許可を得た場合にのみ収集されます。<br>
+        当アプリは、非公開の個人情報（パスワードなど）にはアクセスしません。</p>
+
+        <h2>2. 情報の利用方法</h2>
+        <p>収集した情報は、以下の目的で利用します:</p>
+        <ul>
+            <li>ユーザーのYouTubeアカウントで動画やチャンネル情報を管理するため。</li>
+            <li>アプリケーションの機能提供を最適化するため。</li>
+        </ul>
+        <p><strong>重要:</strong><br>
+        収集した情報は保存されず、アプリケーションの実行中にのみ利用されます。<br>
+        情報は第三者と共有されることはありません。</p>
+
+        <h2>3. 情報の保護</h2>
+        <p>当アプリでは、収集した情報を適切に保護するために以下の対策を講じています:</p>
+        <ul>
+            <li>OAuth 2.0を使用した安全な認証プロセス。</li>
+            <li>情報が外部に漏洩しないよう、暗号化とセキュア通信を実施。</li>
+        </ul>
+
+        <h2>4. ユーザーの権利</h2>
+        <p>ユーザーはいつでも以下の権利を行使できます:</p>
+        <ul>
+            <li><strong>アクセス権の取り消し:</strong><br>
+            Googleアカウントのセキュリティ設定で、アプリのアクセスを取り消すことができます。</li>
+            <li><strong>データ削除のリクエスト:</strong><br>
+            収集された情報が保存されることはありませんが、利用に関する問い合わせはサポートメールまでご連絡ください。</li>
+        </ul>
+
+        <h2>5. サポート窓口</h2>
+        <p>本ポリシーに関する質問やリクエストは、以下のメールアドレスまでご連絡ください:</p>
+        <p>メールアドレス：<a href="mailto:nakason2232@gmail.com">nakason2232@gmail.com</a></p>
+
+        <h2>6. 改定について</h2>
+        <p>本プライバシーポリシーは必要に応じて改定される場合があります。最新の情報については、このページをご確認ください。</p>
+    </main>
+    <footer>
+        &copy; 2024 2ch修羅場カーボーイ
+    </footer>
 </body>
 </html>
